--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Tailwinds for JwR theme",
   "main": "index.js",
   "scripts": {
-    "test": "npm run development"
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js --minify"
   },
   "repository": {
     "type": "git",
@@ -24,5 +30,11 @@
   "bugs": {
     "url": "https://github.com/jadwer/wordpres-jwr-theme/issues"
   },
-  "homepage": "https://github.com/jadwer/wordpres-jwr-theme#readme"
+  "homepage": "https://github.com/jadwer/wordpres-jwr-theme#readme",
+  "dependencies": {
+    "tailwindcss": "^2.2.15",
+    "laravel-mix": "^6.0.31",
+    "cross-env": "^7.0.3",
+    "postcss-import": "^14.0.2"
+  }
 }
