--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "npm run development -- --watch",
-    "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js --minify"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -31,10 +30,15 @@
     "url": "https://github.com/jadwer/wordpres-jwr-theme/issues"
   },
   "homepage": "https://github.com/jadwer/wordpres-jwr-theme#readme",
-  "dependencies": {
-    "tailwindcss": "^2.2.15",
-    "laravel-mix": "^6.0.31",
+  "devDependencies": {
+    "autoprefixer": "^10.3.5",
+    "browser-sync": "^2.27.5",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "cross-env": "^7.0.3",
-    "postcss-import": "^14.0.2"
+    "laravel-mix": "^6.0.31",
+    "postcss": "^8.3.7",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "tailwindcss": "^2.2.15"
   }
 }
